# amazon-q-developer-cli

./: .gitignore  .lintstagedrc.mjs  Cargo.toml  README.md  codebase-summary.md  command_duplication_report.md  deny.toml  migration-strategy.md  package.json  pnpm-lock.yaml  sync.sh  typos.toml
.husky/: pre-push
build-config/: buildspec-linux.yml  buildspec-macos.yml
build-scripts/: build.py  qchatbuild.py  util.py
command-migrations/: context-command-migration.md  internal-command-next-state.md
crates/fig_aws_common/: Cargo.toml
crates/fig_request/: Cargo.toml
crates/fig_request/src/: reqwest_client.rs
crates/q_cli/: Cargo.toml  build.rs
crates/q_cli/src/: diagnostics.rs  fig_install.rs  main.rs  request.rs
crates/q_cli/src/cli/: completion.rs  debug.rs  issue.rs  mod.rs  settings.rs  update.rs  user.rs
crates/q_cli/src/cli/achat/: input_source.rs  mod.rs  parser.rs  tools.rs
crates/q_cli/src/cli/achat/tools/: custom.rs  execute_bash.rs  filesystem_read.rs  filesystem_write.rs  mod.rs
crates/q_cli/src/cli/chat/: api.rs  context.rs  conversation_state.rs  dialog_box.rs  error.rs  hooks.rs  input_source.rs  mod.rs  parser.rs  prompt.rs  tool_manager.rs
crates/q_cli/src/cli/chat/client/: bedrock.rs  mod.rs  q.rs
crates/q_cli/src/cli/chat/commands/: clear.rs  handler.rs  help.rs  mod.rs  quit.rs  registry.rs
crates/q_cli/src/cli/chat/commands/context/: add.rs  clear.rs  mod.rs  remove.rs  show.rs  show_test.rs
crates/q_cli/src/cli/chat/commands/profile/: create.rs  delete.rs  list.rs  mod.rs  rename.rs  set.rs
crates/q_cli/src/cli/chat/commands/tools/: disable.rs  enable.rs  list.rs  mod.rs
crates/q_cli/src/cli/chat/parser/: bedrock.rs  mod.rs  q.rs
crates/q_cli/src/cli/chat/tools/: aws_tool.rs  custom_tool.rs  execute_bash.rs  execute_shell_commands.rs  fs_patch.rs  fs_read.rs  fs_write.rs  git.rs  mod.rs  tool_index.json  use_aws.rs
crates/q_cli/src/cli/chat/tools/internal_command/: mod.rs  test.rs  tool.rs
crates/q_cli/src/cli/chat/types/: bedrock.rs  mod.rs  q.rs
crates/q_cli/src/cli/chat/util/: mod.rs
crates/q_cli/src/cli/internal/: mod.rs  multiplexer.rs
crates/q_cli/src/cli/phoenix/: client.rs  error.rs  mod.rs  parser.rs  parser2.rs  types.rs
crates/q_cli/src/cli/phoenix/client/: bedrock.rs  mod.rs  q.rs
crates/q_cli/src/cli/phoenix/parser/: bedrock.rs  q.rs
crates/q_cli/src/cli/phoenix/tools/: aws_tool.rs  custom.rs  execute_bash.json  execute_bash.rs  filesystem_read.json  filesystem_read.rs  filesystem_write.json  filesystem_write.rs  fs_read.rs  fs_write.rs  mod.rs  tool_index.json  use_aws.json  use_aws_read_only.rs
crates/q_cli/src/cli/phoenix/types/: bedrock.rs  mod.rs  q.rs
crates/q_cli/src/fig_api_client/: customization.rs  mod.rs  model.rs
crates/q_cli/src/fig_api_client/clients/: client.rs  streaming_client.rs
crates/q_cli/src/fig_api_client/interceptor/: session_id.rs
crates/q_cli/src/fig_auth/: builder_id.rs  error.rs  mod.rs  pkce.rs
crates/q_cli/src/fig_auth/secret_store/: macos.rs  mod.rs  sqlite.rs
crates/q_cli/src/fig_aws_common/: user_agent_override_interceptor.rs
crates/q_cli/src/fig_install/: common.rs  download.rs  index.rs  linux.rs  macos.rs  mod.rs  test-index.json  windows.rs
crates/q_cli/src/fig_os_shim/: mod.rs  providers.rs  sysinfo.rs
crates/q_cli/src/fig_settings/: error.rs  history.rs  mod.rs  state.rs
crates/q_cli/src/fig_telemetry/: event.rs
crates/q_cli/src/fig_util/: directories.rs  manifest.rs  mod.rs  region_check.rs
crates/q_cli/src/fig_util/system_info/: linux.rs
crates/q_cli/src/mcp_client/: client.rs  mod.rs
crates/q_cli/src/settings/: error.rs  keybindings.rs  mod.rs  settings.rs  sqlite.rs  state.rs
crates/q_cli/src/telemetry/: definitions.rs
crates/q_cli/src/util/: mod.rs  open.rs  pid_file.rs  region_check.rs
crates/q_cli/tests/: init.rs
crates/q_cli/tests/ai_command_interpretation/: ai_command_interpretation.rs  basic_commands.rs  command_state_flow.rs  context_commands.rs  internal_command_integration.rs  mod.rs  profile_commands.rs
crates/q_cli/tests/common/: mod.rs
docs/: SUMMARY.md  agent-file-locations.md  agent-format.md  built-in-tools.md  command-registry-architecture-comparison.md  default-agent-behavior.md  experiments.md  hooks.md  knowledge-management.md  tangent-mode.md
proto/: build-ts.sh  mux.proto  package.json  remote.proto
rfcs/: 0003-context-hooks.md  (+7 more)
(+1297 files in other folders)
