[package]
name = "fig_request"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[features]
default = ["midway"]
midway = []

[lints]
workspace = true

[dependencies]
bytes.workspace = true
cfg-if.workspace = true
cookie = "0.18.0"
fig_settings.workspace = true
fig_util.workspace = true
reqwest.workspace = true
reqwest_cookie_store = "0.8.0"
rustls-pemfile = "2.1.0"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tracing.workspace = true
url.workspace = true

# Keep these synced with reqwest
# https://github.com/seanmonstar/reqwest/blob/v0.12.12/Cargo.toml
rustls.workspace = true
rustls-native-certs.workspace = true
webpki-roots.workspace = true

[dev-dependencies]
mockito = "1.4.0"
tokio.workspace = true
