[package]
name = "q_cli"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
publish.workspace = true
version.workspace = true
license.workspace = true

[lints]
workspace = true

[features]
default = []
wayland = ["arboard/wayland-data-control"]

[dependencies]
amzn-codewhisperer-client.workspace = true
amzn-codewhisperer-streaming-client.workspace = true
anstream.workspace = true
arboard = { version = "3.5.0", default-features = false }
async-trait.workspace = true
aws-runtime = "1.4.4"
aws-config = "1.0.3"
aws-credential-types = "1.0.3"
aws-smithy-async = "1.2.2"
base64.workspace = true
bitflags.workspace = true
bytes.workspace = true
cfg-if.workspace = true
clap.workspace = true
clap_complete = "4.5.46"
clap_complete_fig = "4.4.0"
color-eyre = "0.6.2"
color-print = "0.3.5"
convert_case.workspace = true
crossterm.workspace = true
ctrlc = "3.4.6"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
eyre.workspace = true
fd-lock = "4.0.4"
flume.workspace = true
futures.workspace = true
glob.workspace = true
globset.workspace = true
indicatif.workspace = true
indoc.workspace = true
mimalloc.workspace = true
owo-colors = "4.2.0"
parking_lot.workspace = true
rand.workspace = true
regex.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
spinners.workspace = true
sysinfo.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
tokio-tungstenite.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing-appender = "0.2.2"
tracing-subscriber.workspace = true
tracing.workspace = true
unicode-width.workspace = true
url.workspace = true
uuid.workspace = true
walkdir.workspace = true
which.workspace = true
whoami.workspace = true
hex.workspace = true
aws-sdk-cognitoidentity = "1.51.0"
aws-sdk-cognitoidentityprovider = "1.60.1"
aws-smithy-types = "1.2.10"
r2d2.workspace = true
rusqlite.workspace = true
r2d2_sqlite.workspace = true
strum = { version = "0.27.1", features = ["derive"] }
shell-color = "1.0.0"


[target.'cfg(unix)'.dependencies]
nix.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2.workspace = true
objc2-app-kit = { workspace = true, features = ["NSRunningApplication"] }
objc2-foundation.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58.0", features = ["Win32_System_Threading"] }
winapi = { version = "0.3", features = ["consoleapi"] }

[dev-dependencies]
assert_cmd = "2.0"
criterion = "0.5.1"
insta.workspace = true
paste = "1.0.11"
predicates = "3.0"
tracing-test = "0.2.4"

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
syn = "2.0.101"
prettyplease = "0.2.32"
quote = "1.0.40"
convert_case.workspace = true
